2009-04-24  Nate Chapin  <japhet@google.com>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25343
        Fix Chromium/Skia bug where -webkit-box-shadow with 0,0 offset
        ignores blur.

        * WebCore\platform\graphics\skia\GraphicsContextSkia.cpp
         (WebCore::GraphicsContext::setPlatformShadow): Add check against
         blur before clearing looper.

Canonical link: https://commits.webkit.org/34883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42833 268f45cc-cd09-0410-ab3c-d52691b4dbfc